# pydevts

./: .gitignore  README.md  client.py  example.py  ps.py  pyproject.toml  server.py  test.py  test_tclient.py  test_tserver.py  testcli.py  testnode.py  tests.py
.github/workflows/: codeql-analysis.yml
certs/: id  id.pub  id2  id2.pub  test.key  test.pem
examples/: fastapi_example.py  picklenode.py  picklenodewriter.py
pydds/: __init__.py  __main__.py  conn.py  ev.py  node.py  p2p.py  structs.py
pydevts/: __init__.py  conn.py  connection.py  connwrapper.py  err.py  error.py  errors.py  event.py  node.py  p2p.py  pub.py
pydevts/auth/: __init__.py  _base.py  noauth.py  rsa.py
pydevts/conn/: README.md  __init__.py  auth.py  message.py  multi.py
pydevts/connection/: conn.py
pydevts/enc/: _base.py
pydevts/extras/: __init__.py
pydevts/host/: __init__.py
pydevts/msg/: __init__.py  name_type.py  num_type.py
pydevts/p2p/: __init__.py  connection.py
pydevts/proto/: __init__.py  _base.py  tcp.py
pydevts/protocol/: README.md  __init__.py  _base.py  quic.py  tcp.py
pydevts/routers/: README.md  __init__.py  _base.py  basic.py  hopbased.py  search_list.py
pydevts/routing/: __init__.py  _base.py  peer.py
pydevts/server/: __init__.py  serve.py
tests/: conftest.py  mocks.py  test_connection.py  test_routing.py
util/: rsagen.py
