[tool.poetry]
name = "pydevts"
version = "0.1.1"
description = "PYDEVTS (PYthon Distributed EVenT System) is a distributed event system written in python and based on the concept of nodes that is designed for the implementation of data stores and other replicated systems."
authors = ["Riley Wilton <meetingprince34@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Peperworx/pydevts"

[tool.poetry.dependencies]
python = "^3.9"
anyio = "^3.1.0"
msgpack = "^1.0.2"
networkx = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"